<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:background="#3cd2c3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/txt1"
                android:layout_marginStart="2dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/t3" />

            <Button
                android:id="@+id/bnt1"
                android:text="@string/bnt"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </Button>

        </LinearLayout>
        <TextView
            android:id="@+id/txt2"
            android:textSize="25sp"
            android:text="@string/t1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>
        <TextView
            android:id="@+id/txt3"
            android:text="@string/t2"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>
        <ImageView
            android:id="@+id/img_icon"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="150dp">

        </ImageView>
        <TextView
            android:id="@+id/txt4"
            android:text="@string/t4"
            android:textSize="25sp"
            android:textColor= "#f20"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>
        <TextView
            android:id="@+id/txt5"
            android:text="@string/t5"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>
        <LinearLayout
            android:weightSum="3"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/rain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </ImageView>
                <TextView
                    android:id="@+id/txt6"
                    android:text="@string/t6"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </TextView>

            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/cloud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </ImageView>
                <TextView
                    android:id="@+id/txt7"
                    android:text="@string/t7"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </TextView>

            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/fan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </ImageView>
                <TextView
                    android:id="@+id/txt8"
                    android:text="@string/t8"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </TextView>

            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/txt9"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:text="@string/t9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>
        <Button
            android:id="@+id/bnt2"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/bnt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </Button>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>